2007-05-25 DavidAnderson <davea42@earthlink.net>
     * dwconf.h dwconf.c: Changed field name to 
       cf_named_regs_table_size as old name was less than clear.
     * dwarfdump.c: Call frame table setup with
       cf_table_entry_count not cf_named_regs_table_size. The newly
       renamed field makes it clearer the call was wrong.
2007-05-04 DavidAnderson <davea42@earthlink.net>
     * print_die.c: printing of global offset of DIEs 
       with -G is now more in the style of previous output.
2007-04-18 Chris Quenelle <chris.quenelle@sun.com>
     * Makefile.in:
          - use $(srcdir) for files in source directory
          - support running rules in parallel by
          - use different tmp file names in different rules.
          - use more accurate target for dwarf_names.{c,h}
     * dwarf_names.awk: Enhance script to be able to generate either
       #define-style headers or enum-style headers
     * dwarfdump.c: dump most everything by default if no arguments
       are given to dwarfdump.  This seems to be a more useful default
       than showing nothing at all.  Also add a -G option to show
       the (G)lobal section offset for each die within an a.out. If you
       think you're seeing data corruption inside a .debug_info
       section, this is a useful option to have.
     * print_die.c: Support compressed integer blocks.  This is an
       array (DW_FORM_block) of LEB numbers used as part of a Sun
       extension, DW_AT_SUN_func_offsets.  Also add support for
       a new dwarf enum DW_ATCF_xxxx. This is used in DW_AT_SUN_cf_kind.
       Also, fix DW_AT_upper_bound so it can be a constant or a location
       list.  DW_AT_count and DW_AT_data_member_location should also be
       fixed eventually.
     * print_sections.c: Changes to support zero-padding in the middle of
       section data.  Change offset labels to be a little more clear.
       Not sure about the get_str failure.