@@ -21,7 +21,7 @@ The format may change from release to release, so it is
 unwise to depend too heavily on the format.
 .P
 .PP
-Frame inforation (.debug_frame and .eh_frame) is heavily
+Frame information (.debug_frame and .eh_frame) is heavily
 dependent on the ABI/ISA of the object file.  The '-x abi=<abi>'
 flavors below describe how to name an abi and use that to guide
 the -f or -F processing (without '-x abi=<abi>'/ dwarfdump ignores
